--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i && npm run build --prefix client &&   node index.js"
+    "build": "npm i --prefix client&& npm run build --prefix client",
+    "start": "npm i && node index.js"
   },
   "keywords": [],
   "author": "",
