--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i --prefix client&& npm run build --prefix client",
+    "build": "npm run build --prefix client",
     "start": "npm i && node index.js"
   },
   "keywords": [],
