--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "oauth": "^0.10.0",
     "oauth-1.0a": "^2.2.6",
     "request": "^2.88.2"
-  }
+  },
+  "engines": {
+  "node": ">=20.15.1"
+}
 }
